Fix spacing issue when removing a class on /class/

--- a/static/class.css
+++ b/static/class.css
@@ -20,3 +20,7 @@
     cursor: inherit;
     display: block;
 }
+
+#classes .panel {
+    margin-bottom: 1em;
+}
